@@ -1,7 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX kannel-sqlbox-0.7.2-configure.patch 1242 SHA256 5837c85a6d124f8b16be711b086da66eda8e44fbf638c0eff47b3c0e28193783 SHA512 7b9811f98e908674527a0c92a018b1ab19b520e026ef2f921dc0fdd6a7eb55787ce5885a3d9e3f65b614fe96cda47836af912dc32f84294d92a19ddfd1eb5b49 WHIRLPOOL 36bba2b4d72bdaeafb26a87ebd98a6ec4b329c7036ae1e0e8962c9a965d8751fa1874becd638973f3c7a37b2dd8f3e01264c6c16110e5034711b11072ef3408d
 AUX kannel-sqlbox-0.7.2-sqlinit-hfiles.patch 3405 SHA256 ac316d8289d1fa4bef4158b8df529b7097e8ba208e41707d0b34053c6cb6db09 SHA512 224d92055070ef8f5b819deddae9a37cf1bd33e1e751f93f9853d16ec5990486d70cd9e291a76ffca5e4e89762b87b94c8387d1489f8868edafc619347286979 WHIRLPOOL 09f26b790f6740738f0b45a7f4beb4f278d52a3ce56084956206c77fad705f9f1d5a5d5c522b11eb933adc13a46fff955f9bdff86db6db98f678931d04b7088a
 AUX kannel-sqlbox.initd 947 SHA256 5ab68fd5f716828819163bf86950af5350ea5272800376537814723dde118efd SHA512 5199a993236f2d58a96f345526642bf0d202620a1895f008f305dc8e06865d70c00a296735fe294e0f11dcc7146079cd87262198c02c1b9265f8aac4035d6496 WHIRLPOOL 4acd973ccbba395b75f287cdefaf9884d1a23643d03977ec04b73fe040ed0289f6496ea82f5c626e196df9ec7d519a51bee870745f5124d614dfcaada08a2aac
 DIST sqlbox-0.7.2.tar.gz 118074 SHA256 8d220ff4c1f026c91b2d5eb23d4b59468228f7d9d6cf8358989169dffeda1428 SHA512 0f8f565346e67f394a8f582c24ba149a62781e3a1b258ed5b137de8219aa264889986f2242409e20f75b42d754fdcb2f52a755c61ab6dc16ff6d102f6bd0dcc1 WHIRLPOOL b32397c2ff173e1dd134665f8fbea570ff3c54a20684853300a127a89b95ae94d5c511fcb7349fed393c884ca3129e45bc8d8cd92622f1b16fb24d73bdb57319
-EBUILD kannel-sqlbox-0.7.2.ebuild 2166 SHA256 aee29d55c201b257e4bbe4b933f90427b5be7cc201ecb5d2576d01bb10524bb5 SHA512 24e62a9a5d5dc0dd6ff0e3ec9898b58e53160433bbbffaef556a4f9ea354df1c9e1e3a5e6d5509a3869eb6302e88cc3aa373b1b7e40d5cf9b732198aaf852318 WHIRLPOOL 416892764db3f07b205f14cad8c7020649cec58f982ae5c6595b541a2d5bf587e71ccd69011252a22c618baa07aa95c18e7372903ac1653f78557ed58ebf3136
-MISC ChangeLog 702 SHA256 4af493698e05878d053b49091c724a030db295b38c39eef16e079ec079b456f7 SHA512 8b0ecdcc406a36c7fd31e86c79e79455bd4c9a7f0b210e6e4058db8f1ccca0f1d4ced8c52f87b4c90c65782bf0a670410b1ff6158852cbf73c225f3a1219fb31 WHIRLPOOL 5744c04a3bb82e81f51beb792ca999d3d567551d22809e4da94673e5b94e2498c29f978838addc58dca805375a9dc73f5ae2f4963875cbdde83451f32b03be1d
+EBUILD kannel-sqlbox-0.7.2.ebuild 2167 SHA256 9df9a50e1964b59f27a537287f758e19d4c41d66a2060b323ba6fd337d83f61c SHA512 b7ed5734c7e44a9b30fad6d39e45452b38bc415b30b0ef1cc0e8358e201bdaf1492853f5f838658d2297db9f5eae4f5083bd4b31a5b7e6a5d1c52bb7159c2073 WHIRLPOOL 33595fa881b8fd7afc273a06f489dd8115ce6770c125d6ff868dbd1302a1345ac576ee28a527c4c94a3dd5b3fa894cd32bb166014360bcb7dc0e65d61f8c694c
+MISC ChangeLog 852 SHA256 914b701df9f5f665ee1bfdf7319a22531e0971d756bae2d14cf807454be25fcd SHA512 9267654bc10c0c356ec7cdf407634edf517ac72de25a37f6942ac5fcc303ae46150ad13253cab154231dc2020993495bc581eb8933b8b175f89f9d122536f1eb WHIRLPOOL 27fae2422990753726cc772573e5929b53325c08de156236335707a5953e83bad3a3a30ec7f49b30829480be030aacb1d445a858478e568136ae4687c775ae3c
 MISC metadata.xml 327 SHA256 e581174a93d3cee3c314ea6725cb3538dd5536915788a51dea2cbbfcf4686284 SHA512 907cf646312d8902815fb6d5e0deef1aa347f5b0714ea87228564b098a841ab77a17db27839104a8169b412b6bea601f95b66d3fea5a6fcfd917885ae0db9ca9 WHIRLPOOL 379d907f84763ac3867689ac3747b0e8ea31180037f333194c8cfbd60e513f11cad43233a27a41e8b45574cda5eb29a3fa871c19832d6930689a0658659a3029
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQuxEFAAoJEDxpGckxwJCBPfkP/07/07wy+Tr9pCVpUbK+LsZg
+SEky32+PWVs5A90+irpZSlsg9+dr7uGqVmF4rTKDjdJcgZSPuA0BHUPhItN1L9JV
+V1UGQhfWnEoj0rjDvEpZY+BnOsXD7o6M3lmMwL3PZ8FwUgJnIXTBtnkGWchCzQve
+SCRDvJTXNHaiXWW3VGasr9EnlDFn6ezznbXcp7Cj26DwdFQP/bauBWr9AKoxXKjK
+c7LM6M11q2QZtfBYqPIVAeYUm6ysJSWOF7QfIzHaqprqXimqZ/QXg5TiGENE4Ap2
+pbVfsjDP1fdp5I8W8MgCIuglB/Qkeiw6bMLVYML46q9d8/vLnRxPYd9ckHLGqWvQ
+MddhIsGK0WZdiI2YWr0XR4zxUS5vwoNcWfJXcSf6Uscc7q7JZRs8eMZKY3PjOjVb
+6gNsU+aW9C1pmmuoak8YnBHOGNER+mzbknxM6JppvRi1HFfLjdTf3zwfg8AXZAxp
+36ciW7voQVTAWtAtOHyMAUxco1IWqcQWIVJ7N24cnySgn7StLBJCgmryuN+qUiwc
+LwaIV4teyP9X0TJx8ib7TpYoZy4QTte2ZZZX4QsWR0Uc/QFAsIMVaDWAXg+m5/XZ
+yl34xRKG3fTTTT10JzmACrX3hUhsmT7d1mSQwS8buch+JAw/3EBTugr/m79DyFel
+PU8VjkYzXGTqkQ33GsyU
+=LNMA
+-----END PGP SIGNATURE-----
