@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/kannel-sqlbox/kannel-sqlbox-0.7.2.ebuild,v 1.2 2009/12/12 10:20:57 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/kannel-sqlbox/kannel-sqlbox-0.7.2.ebuild,v 1.3 2012/12/02 08:26:23 ulm Exp $
 
 EAPI="2"
 
@@ -10,7 +10,7 @@ DESCRIPTION="DB-Based Kannel Box for message queueing"
 HOMEPAGE="http://www.kannel.org/~aguerrieri/SqlBox/"
 SRC_URI="http://www.kannel.org/~aguerrieri/SqlBox/Releases/sqlbox-${PV}.tar.gz"
 
-LICENSE="Kannel"
+LICENSE="Apache-1.1"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="ssl doc"
