@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX kannel-1.4.1-custom-wap-ports.patch 13266 SHA256 e0959fd25dd41fc2aa01b488fc70b0d29d1ab66aed1151de60fcc9e84e50512f SHA512 2b154dec8c98b8698710c9a942a5c97151797f78efb4bd7ce8715e30a30cd8157613b60d39c3aab3bada4563bde59bb9bdf0e1621aadc40031fdaf04f3e69acf WHIRLPOOL 7c48676be2b3288253b7359c651e0a131a21a98137fccdf8ba3063c84f702173f2b3d25d420056385bbd44d9a30bf96a692f96b09b34d9207e6f79cb66f058cb
 AUX kannel-1.4.1-nolex.patch 672 SHA256 237a6ea2f2e39657ba49c0ee34d660e060bea94117e861f9f970b283c6cccb08 SHA512 15436268a5396ac1c9b0e51460d72af18945eef7d796824924745f9c1af73ceb5b6655531860936f59dcc8f316b6d3844824a2db5b29667c334f3cddf0824845 WHIRLPOOL 28e18e5f06933b0c401a2156cabe811c383b9a58927ce1c92e7ac2c098d215833ad807a6bd70bb74834074afeea5cceb8fb0fd5410aa543eeff147178b420654
 AUX kannel-1.4.3-autotools.patch 952 SHA256 3e04fdf52e6dbc10da2edee7776fc35254aafea3467d168aabf30f9ca65b0443 SHA512 ff449047fa16d6274682e0c1ccb5741187d397345bdc28bdcdf9aea4c4329d572e63066a75433191a1128302cf529d186a1d493bbc0d9e7de4ff271b59413f4b WHIRLPOOL d94fe887c54c917a5c8e36c08f0ff2900176139ad87489e7b3d0724591ada06cfa5f527a801ac7c718016fc1b146b6038107412b8797f03af1c2801cfb099bba
@@ -9,6 +12,23 @@ AUX kannel-initd 1529 SHA256 a1b0587fddd348c31ad2e02822e32b1389339b531259ddd8405
 AUX kannel-smsbox.initd 918 SHA256 01381241fd0140fb70723dad1f3ac2e2bedeb65806a0341d7fb8cd677bea0167 SHA512 826b277191dd1645fc7fc74ae246a941b4558be3b46953a346e58b01a0205180c0afb6a45e330620b8b9f572c5aed10b67d2c1d4904b5ef4bea54b6fb57d0392 WHIRLPOOL ab14edc1b58d4a9c1dacf3413589ef898f1b931839e66b317a772789246537dbb85e87c64bc4273f25c63cb014a19d6e8bfb070a067ed64b7076977670e43b77
 AUX kannel-wapbox.initd 918 SHA256 f7eb826f46cd216eaf2e03e4e8470556ab835baa8fe8704bb4e9d61b5f3b49b6 SHA512 81ace04e2251c448f4bc8acba4f482d16316bb9cdc0fa750a274af41a23f9ca5da88124d15339021028159c3e8832fe348c6d175615d0f20f57e4d61a8772a2c WHIRLPOOL 17174306c6589393920810605b3fb6d62a824eb48fb8178cdf94ea71d715b02492450f8cadd7fd18efa7edb383f68a954d515ad023eeb67ef2b394848a701c82
 DIST gateway-1.4.3.tar.gz 2654925 SHA256 9e247f4168290973d799d580472494a89a2cf22db035550f6423868b5bf78a07 SHA512 2e727cd3f57ba5af815f1c029dd9125db17b4f980bb555c20cde693e03226f52e1d2969a3d262e0dda1198cbddd3cc1d2f708aaa623f656d91aef686f4925dae WHIRLPOOL 2830599a7184b52b653d77fec03614e3e09e518e4bf0cb7fe87c5a7640341f01a7dfb0904c406fc0628b60a7b63be291c39ec8b0cfd16d56def171761f81d7bb
-EBUILD kannel-1.4.3-r1.ebuild 3108 SHA256 5b0f19fd9a6c32aa78648db108340a4873cc5c60af9f0be24eea014a8af8c8d8 SHA512 102de48dd5dc7216b7cdd26ead860544e58cd4f616844105c09dfdbde69dc5ab2b754b03b95dceb49bd36a26939b8de154508f1edc73e0187ac10753e323d5cd WHIRLPOOL 1da6f78dfd21352ca50495aa4a9223e039b9e8f67fb3e6c283fc497bf4ffa528ff9a33ce28fe8afce28bbf7116d873735cf3a175f5ebc5de72b277ccfe61b537
-MISC ChangeLog 4380 SHA256 2cd7ff787cc81a25e545f592ecfd758cc7259662d6e24092904ad8201b5a1797 SHA512 6fd586add013f350d53ac83bfee4294e829fd859f9dc5b8d15be8143e0fbdf0e7f85142d6fd9ba3192b6e72fbe7ae953086d0f561bbfeb277e0276ee109c0a31 WHIRLPOOL 16b2f051b3ceefc60a0ea66964a0098d5d21d1cef53680fae105891b7efd9a0f18249a66c19e0267ae0e27c2061a5cbc32592d2cd9cb3faa4fb81e71e416a71e
+EBUILD kannel-1.4.3-r1.ebuild 3108 SHA256 08be32f3afb93d1f7feab972deb143f9ecba97821bd1780be982a6fa83bf9f7c SHA512 68d759ef36f71197d03484cc147776c8918b187ab0b82681d4c69513791211c4ffa10f6fd3f93d5be82171a3fa34f67d9d13f543406b992cdb59ca265640e939 WHIRLPOOL f0c834def63ea4a4a31722a6fb6b330ba2ad2a14a5d337f7e53c46cb7d85868e0e4d9ffb8ac054739f29c8432340bdbc0fbd9e3b205c0b74ab5c4193c37f0202
+MISC ChangeLog 4525 SHA256 1b27da51033eacbc60e66d159ec58a330a24a1978b5a1212fd64059e4a5379d2 SHA512 7f8c601cb3b9b50518ccaba84c2cb6a9416aab924bad649ec199bf36379ec9d0ca8350835ebc66dffc9d15d2e649df7625c033848853709e0167e0863c2d2e7b WHIRLPOOL b1eb6f2b2982da231b8b13245c26d403c9b46b5b6393bbfc21a4d81fc2a5d5b33f55d039da46e61b51cc366f79c240959d912ce9242c17936d20825785321344
 MISC metadata.xml 389 SHA256 16236241363c791f472a403615d4cf12b0126967113605edce57329771795d61 SHA512 088487b92f4c22596884b0cb20e3f82c3ac8c1cca2020edf770b1895a3a8b0e6c83af8c7b16b0174008ac60e913862f8ed413fbbeadd78144cab1e19cf2d158b WHIRLPOOL fd4181d94b043df8e20204b189003e68c82e879f6cd8efab567eb549d095307915701954bf59a80ac154e157bc75ff651381eee060f4c36dbf3a5a6a1d60bca2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQuxCgAAoJEDxpGckxwJCBFPwQALz+afPMTwe+RVW4SjhuvIru
+8NHEmIm0P0XADMxF7a6LKfmwA33GnaZvKyZD3yph1iUGQjp5UgPQlaVfFjHbXKrS
+aLx7IJgqjIZzhZfLlru+YLVVa3HutJcq3JFbLa9QmlsDRa9hRmhyamG6YYOkWsrY
+9x5V7cHzQB0uQDttT/bI3JCZDPVAOsNbTUevjGiC9sFl0y9QtFT0MOdnGr/M47qL
+UldGmapmn1IeHaeRMR/YQ8d6sZBanquXFZBjL7Ud5R/guyqiB9TUc770gPCwGTA8
+u6022hWVxH6cilFDfXdzNleNVMBwfkO6JxVZn+HpOZhoJTMSqB8Nqlrnpmh68ghP
+0ldAwKqvJry/81C6GmMtb76vW8vCJBAx9MoIfR2ajY1M4BPb21WrkdVAT7zHYUp/
+XoKllw9+I1V2Vd/dP9JJQ1hB9VrZcNfwmnf5oNRw6gxAysxrwfBYCVzNdkH36SUN
+zOg4SdeBWZc8g/hIa5ojMR6Ksjk05nxRyLMV+bhrXdQQ6sQGl845+vXeQ5tRpTlW
+TDu1n4x6eWaG7S5kg4bL5RDSRSfF9TnxzZNWARMfdk/M4p7fuVDSXLWAeuNbAR1n
+S0ZtOdSKd6feVVNlg3LW4VAmbe+cda6XfSMkErriq9uj13LkDXt7E3cTvzLVFFdm
++SZV0xcTc+qVKSCYpXJR
+=eoXF
+-----END PGP SIGNATURE-----
