@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/kannel/kannel-1.4.3-r1.ebuild,v 1.4 2012/06/02 04:58:53 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/kannel/kannel-1.4.3-r1.ebuild,v 1.5 2012/12/02 08:24:43 ulm Exp $
 
 EAPI="2"
 WANT_AUTOMAKE=none
@@ -11,7 +11,7 @@ DESCRIPTION="Powerful SMS and WAP gateway"
 HOMEPAGE="http://www.kannel.org/"
 SRC_URI="http://www.kannel.org/download/${PV}/gateway-${PV}.tar.gz"
 
-LICENSE="Kannel"
+LICENSE="Apache-1.1"
 SLOT="0"
 KEYWORDS="~amd64 x86"
 IUSE="ssl mysql sqlite postgres pcre doc debug pam"
