@@ -1,6 +1,9 @@
 # ChangeLog for app-mobilephone/kannel-sqlbox
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/kannel-sqlbox/ChangeLog,v 1.2 2009/12/12 10:20:57 mrness Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/kannel-sqlbox/ChangeLog,v 1.3 2012/12/02 08:26:23 ulm Exp $
+
+  02 Dec 2012; Ulrich Müller <ulm@gentoo.org> kannel-sqlbox-0.7.2.ebuild:
+  Update LICENSE, this is identical with the Apache-1.1 license, bug 444848.
 
   12 Dec 2009; Alin Năstac <mrness@gentoo.org> kannel-sqlbox-0.7.2.ebuild:
   Correct kannel dependency atom (#296019).
